# mycelium

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FILTER-REDESIGN-PROMPT.md  NEW-FEATURES-PLAN.md  NEW-FEATURES.md  README.md  build.rs  install.sh  test_output.txt
.github/workflows/: audit.yml  ci.yml  coverage.yml  performance.yml  release.yml
.rhizome/: cache.json
benches/: tooling_hot_paths.rs
docs/: ANALYTICS.md  ARCHITECTURE.md  AUDIT_GUIDE.md  COMMANDS.md  COST_ANALYSIS.md  ECOSYSTEM-SETUP.md  EXTENDING.md  FEATURES.md  INTERNALS.md  PLUGINS.md  README.md  ROADMAP.md  TEST_EXEC_TIME.md  TRACKING.md  TROUBLESHOOTING.md  UNINSTALL.md  UPDATE.md  analytics.md  architecture.md  audit-guide.md  commands.md  cost-analysis.md  extending.md  features.md  internals.md  plugins.md  roadmap.md  test-exec-time.md  tracking.md  troubleshooting.md  uninstall.md  update.md
docs/getting-started/: README.md  installation.md
docs/plans/: README.md  compressed-format-experiments.md  filter-redesign-handoff.md
filters/: npm-test.toml
hooks/: capture-code-changes.js  capture-corrections.js  capture-errors.js  mycelium-awareness.md  mycelium-rewrite.sh  session-summary.sh  test-mycelium-rewrite.sh
hooks/lib/: utils.js
plugins/: atmos.sh
scripts/: benchmark.sh  check-installation.sh  install-local.sh  install-plugin.sh  mycelium-economics.sh  release.sh  test-all.sh  test-tracking.sh  update-readme-metrics.sh  validate-docs.sh
src/: adaptive.rs  atmos_cmd.rs  benchmark_cmd.rs  cargo_cmd.rs  ccusage.rs  commands.rs  completions_cmd.rs  config.rs  curl_cmd.rs  deps.rs  dispatch.rs  doctor_cmd.rs  env_cmd.rs  filter.rs  filtered_cmd.rs  format_cmd.rs  hook_audit.rs  hook_audit_cmd.rs  hook_check.rs  hyphae.rs  hyphae_client.rs  integrity.rs  json_cmd.rs  json_output.rs  lib.rs  local_llm.rs  main.rs  parse_health_cmd.rs  platform.rs  plugin.rs  plugin_cmd.rs  psql_cmd.rs  rewrite_cmd.rs  rhizome.rs  rhizome_client.rs  runner_cmd.rs  self_update_cmd.rs  socket_server.rs  streaming.rs  summarizer.rs  (+5 more)
src/aws_cmd/: cloudformation.rs  ec2.rs  ecs.rs  generic.rs  mod.rs  rds.rs  s3.rs  sts.rs
src/cargo_filters/: build.rs  install.rs  mod.rs  nextest.rs  shared.rs  test.rs
src/cc_economics/: display.rs  export.rs  merge.rs  mod.rs  models.rs
src/commands/: subcommands.rs  tests.rs
src/container_cmd/: compose.rs  docker.rs  kubectl.rs  mod.rs
src/discover/: mod.rs  provider.rs  registry.rs  registry_compound.rs  registry_parser.rs  registry_shell.rs  registry_tests.rs  report.rs  rules.rs
src/discover/provider/: claude.rs  codex.rs  mod.rs  shared.rs  tests.rs
src/dispatch/: content_router.rs  exec.rs  families.rs  routes.rs
src/display_helpers/: file_grouper.rs  mod.rs
src/fileops/: diff_cmd.rs  grep_cmd.rs  log_cmd.rs  ls_cmd.rs  mod.rs  read_cmd.rs  tree_cmd.rs  wc_cmd.rs
src/fileops/find_cmd/: mod.rs  parser.rs  search.rs
src/filters/: declarative.rs  mod.rs
src/gain/: compare.rs  display.rs  export.rs  helpers.rs  mod.rs  rewrite_diagnostics.rs
src/go_eco/: golangci.rs  mod.rs
src/go_eco/commands/: filters.rs  mod.rs
src/init/: claude_md.rs  clients.rs  context.rs  ecosystem.rs  hook.rs  host_status.rs  json_patch.rs  mod.rs  onboard.rs
src/js/: mod.rs  next.rs  npm.rs  playwright.rs  prettier.rs  prisma.rs  tsc.rs  vitest.rs
src/js/pnpm/: mod.rs  parsers.rs
src/learn/: corrections_store.rs  detector.rs  mod.rs  report.rs  types.rs
src/lint_cmd/: eslint.rs  mod.rs  pylint.rs
src/lint_cmd/snapshots/: mycelium__lint_cmd__eslint__tests__eslint_snapshot.snap  mycelium__lint_cmd__pylint__tests__pylint_snapshot.snap
src/parser/: README.md  formatter.rs  mod.rs  types.rs
src/python/: mod.rs  mypy.rs  pip.rs  pytest.rs  ruff.rs
src/snapshots/: mycelium__curl_cmd__tests__curl_large_json_truncates_values.snap  mycelium__curl_cmd__tests__json_snapshot.snap  mycelium__curl_cmd__tests__non_json_passthrough.snap  mycelium__filter__tests__minimal_filter_snapshot_mixed_comments.snap  mycelium__terraform_cmd__tests__apply_snapshot.snap  mycelium__terraform_cmd__tests__plan_snapshot.snap
src/tracking/: mod.rs  queries.rs  schema.rs  telemetry.rs  tests.rs  timer.rs  utils.rs
src/vcs/: mod.rs
src/vcs/gh_cmd/: issue.rs  markdown.rs  mod.rs  parsers.rs  passthrough.rs  repo.rs  run.rs
src/vcs/gh_pr/: actions.rs  checks.rs  list.rs  mod.rs  view.rs
src/vcs/git/: diff.rs  log.rs  mod.rs  mutations.rs  stash.rs  status.rs
src/vcs/git_filters/: diff.rs  mod.rs  status.rs
src/vcs/gt_cmd/: filters.rs  filters_tests.rs  mod.rs
tests/: foundation_alignment_guard.rs  git_stash_filter_test.rs  learn_integration_test.rs  usage_event_contract_guard.rs
tests/fixtures/: cargo_build_raw.txt  cargo_clippy_raw.txt  cargo_install_raw.txt  cargo_nextest_raw.txt  curl_json_raw.txt  curl_large_json.json  diff_unified_raw.txt  docker_compose_ps_raw.txt  docker_ps_raw.txt  eslint_json_raw.txt  git_stash_list_raw.txt  learn_session.jsonl  ls_lah_output_raw.txt  mypy_raw.txt  npm_run_output_raw.txt  pip_list_raw.txt  playwright_json_raw.txt  pnpm_install_raw.txt  prettier_check_raw.txt  pylint_json_raw.txt  pytest_raw.txt  ruff_check_raw.txt  ruff_format_raw.txt  terraform_apply_raw.txt  terraform_plan_raw.txt  tree_output_raw.txt  tsc_errors_raw.txt  vitest_json_raw.txt  wc_multifile_raw.txt
tests/format_eval/: main.rs
tests/snapshots/: git_stash_filter_test__filter_stash_list_snapshot.snap
(+2 files in other folders)
