[package]
name = "mycelium"
version = "0.4.3"
edition = "2024"
authors = ["William Newton"]
description = "Mycelium - High-performance CLI proxy to minimize LLM token consumption"
license = "MIT"
homepage = ""
repository = "https://github.com/basidiocarp/mycelium"
readme = "README.md"
keywords = ["cli", "llm", "token", "filter", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mycelium"
path = "src/main.rs"

[lib]
name = "mycelium"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
colored = "3"
dirs = "6"
rusqlite = { version = "0.39", features = ["bundled"] }
toml = "1"
jiff = "0.2"
tempfile = "3"
sha2 = "0.10"
ureq = "3"
strip-ansi-escapes = "0.2"
spore = { path = "../spore" }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
insta = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# cargo-deb configuration
[package.metadata.deb]
maintainer = "William Newton"
license-file = ["LICENSE", "0"]
extended-description = "mycelium filters and compresses command outputs."
section = "utility"
priority = "optional"
assets = [
  ["target/release/mycelium", "usr/bin/", "755"],
]

# cargo-generate-rpm configuration
[package.metadata.generate-rpm]
assets = [
  { source = "target/release/mycelium", dest = "/usr/bin/mycelium", mode = "755" },
]
