[package]
name = "mycelium"
version = "0.8.18"
edition = "2024"
rust-version = "1.85"
authors = ["William Newton"]
description = "Mycelium - High-performance CLI proxy to minimize LLM token consumption"
license = "MIT"
homepage = ""
repository = "https://github.com/basidiocarp/mycelium"
readme = "README.md"
keywords = ["cli", "llm", "token", "filter", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mycelium"
path = "src/main.rs"

[lib]
name = "mycelium"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
colored = "3"
dirs = "6"
rusqlite = { version = "0.39", features = ["bundled"] }
toml = "1.1"
chrono = "0.4"
tempfile = "3"
sha2 = "0.10"
strip-ansi-escapes = "0.2"
spore = { git = "https://github.com/basidiocarp/spore", rev = "0bc2e878010e75e30e26fa517d747e97d59628b0" }
tracing = "0.1"
libc = "0.2"
which = "7"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
insta = "1"
criterion = "0.5"

[[bench]]
name = "tooling_hot_paths"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3

# cargo-deb configuration
[package.metadata.deb]
maintainer = "William Newton"
license-file = ["LICENSE", "0"]
extended-description = "mycelium filters and compresses command outputs."
section = "utility"
priority = "optional"
assets = [
  ["target/release/mycelium", "usr/bin/", "755"],
]

# cargo-generate-rpm configuration
[package.metadata.generate-rpm]
assets = [
  { source = "target/release/mycelium", dest = "/usr/bin/mycelium", mode = "755" },
]
